<resources>
    <string name="app_name">CurrexEZ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About Us</string>

    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="finger_title">Fingerprint Authentication</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="USD">US dollar</string>
    <string name="JPY">Japanese yen</string>
    <string name="BGN">Bulgarian lev</string>
    <string name="CZK">Czech koruna</string>
    <string name="DKK">Danish krone</string>
    <string name="EUR">Euro</string>
    <string name="GBP">Pound sterling</string>
    <string name="HUF">Hungarian forint</string>
    <string name="PLN">Polish zloty</string>
    <string name="RON">Romanian leu</string>
    <string name="SEK">Swedish krona</string>
    <string name="CHF">Swiss franc</string>
    <string name="ISK">Icelandic krona</string>
    <string name="NOK">Norwegian krone</string>
    <string name="HRK">Croatian kuna</string>
    <string name="RUB">Russian rouble</string>
    <string name="TRY">Turkish lira</string>
    <string name="AUD">Australian dollar</string>
    <string name="BRL">Brazilian real</string>
    <string name="CAD">Canadian dollar</string>
    <string name="CNY">Chinese yuan renminbi</string>
    <string name="HKD">Hong Kong dollar</string>
    <string name="IDR">Indonesian rupiah</string>
    <string name="ILS">Israeli shekel</string>
    <string name="INR">Indian rupee</string>
    <string name="KRW">South Korean won</string>
    <string name="MXN">Mexican peso</string>
    <string name="MYR">Malaysian ringgit</string>
    <string name="NZD">New Zealand dollar</string>
    <string name="PHP">Philippine piso</string>
    <string name="SAR">Saudi Riyal</string>
    <string name="SGD">Singapore dollar</string>
    <string name="THB">Thai baht</string>
    <string name="TWD">New Taiwan Dollar</string>
    <string name="ZAR">South African rand</string>


    <!-- For User Profile -->
    <string name="nameHint">Full Name</string>
    <string name="PhoneNumberHint">Phone Number</string>
    <string name="addressHint">Address</string>
    <string name="passportHint">IC Number</string>
    <string name="btnConfirmUser">Confirm</string>

    <string name="lblName">Enter your name as stated in your IC/Passport</string>
    <string name="lblNational">Select your nationality</string>
    <string name="lblBrith">Select your birth date</string>
    <string name="hihtBrith">Birthday</string>
    <string name="lblphone">Enter your mobile phone number (numbers only)</string>
    <string name="lblIC">Enter your Identity Card Number (xxxxxx-xx-xxxx)</string>
    <string name="lbladdress">Enter your address as stated in IC</string>
    <string name="lblphoto">Photo of IC</string>
    <string name="lblCondition">I agree to the terms and conditions of CurrexEZ.</string>

    <string name="lblname">Name :</string>
    <string name="lblPassport">IC / Passport :</string>
    <string name="lblBirthdate">Birth date :</string>
    <string name="lblNationality">Nationality: </string>
    <string name="lblAddress">Address :</string>
    <string name="lblMobileNumber">Mobile Number: </string>
    <string name="PhotoofIC">Photo of IC:</string>
    <string name="btnEditProfile">Edit Profile</string>

    <string name="lblSelectacurrencytopurchase">Select a currency to purchase</string>
    <string name="enteramountyouwishtopurchase">Enter amount you wish to purchase</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="selectCollectionDate">Select Collection Date</string>
    <string name="selectCollectionLocation">Select Collection Location</string>
    <string name="selectPaymentMethod">Select Payment Method</string>
    <string name="debitCard">Debit Card</string>
    <string name="onlinePayment">Online Payment</string>

    <string name="proceedToPayment">Proceed to payment</string>
    <!--String Array -->
    <string-array name="national">
        <item>--Choose Your Country--</item>
        <item>Malaysia</item>
        <item>Austria</item>
        <item>Argentina</item>
        <item>Bangladesh</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Denmark</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Mexico</item>
        <item>New Zealand</item>
        <item>North Korea</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Russia</item>
        <item>Singapore</item>
        <item>South Africa</item>
        <item>Swaziland</item>
        <item>Taiwan</item>
        <item>Turkey</item>
        <item>Thailand</item>
        <item>United Kingdom</item>
        <item>United State</item>
        <item>Vietnam</item>
    </string-array>

    <string name="invalid">Card invalid</string>
    <string name="scan_with_card_io">Scan with card.io</string>
    <string name="error">Please select a card</string>
    <string name="title_activity_purchase_history2">PurchaseHistory2</string>
    <string name="tab_text_1">Upcoming Collection</string>
    <string name="tab_text_2">Past Purchase</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="purchase_currency">Purchase Currency</string>
    <string name="purchase_myr">Purchase Ringgit</string>
    <string name="sell_currency">Sell Currency</string>
    <string name="sell_myr">Sell Ringgit</string>
    <string name="charge_fee">You will be charged for a small amount of fees for deposit.</string>
    <string name="valid">Form is valid. Card is added successfully.</string>

    <!--sell currency-->
    <string name="Selectacurrencytosell">Select a currency to sell</string>
    <string name="Enteramountyouwishtosell">Enter amount you wish to sell</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="selectdepositpaymentmethod">Deposit balance into bank?</string>
    <string name="creditCard">Credit Card</string>
    <string name="banktitle">Select Your Bank Provider</string>
    <string name="enterBankAccNum">Enter your bank account number</string>
    <string name="transferIntoBankAcc">Yes</string>
    <string name="noTransfer">No</string>
    <string name="hintforAccNumEnter">Account Number</string>
    <string name="chargeNotice">A cancellation fee of 8% of the total amount will be charged if you do not deposit the currency on the collection date.</string>
    <string name="selectacurrencytoconvertto">Select a currency to convert to</string>

    <string name="Selectcurrencytopaywith">Select currency to pay with</string>

    <!-- for drawable-->
    <string name="CurrencyRates">Currency Rates</string>
    <string name="ConversionCalculator">Conversion Calculator</string>
    <string name="PurchaseCurrency">Purchase Currency</string>
    <string name="MyPurchase">My Purchase</string>
    <string name="Language">Language</string>
    <string name="MyProfile">My Profile</string>
    <string name="Logout">Logout</string>
    <string name="SellCurrency">Sell Currency</string>
    <string name="BrowseFlight">Browse Flight</string>
    <string name="Browsehotel">Browse Hotel</string>
    <string name="Location">Find Near Place</string>

    <!--For Language change-->
    <string name="dialogTitle">Change Your Language</string>

    <string-array name="languageChoose">
        <item>English</item>
        <item>Chinese</item>
    </string-array>

    <string name="FloatingBtnpurchaseCurrency">Purchase Currency</string>
    <string name="FloatingBtnsellCurrency">Sell Currency</string>

    <!--Location select-->
    <string-array name="location">
        <item>KLIA</item>
        <item>KLIA2</item>
        <item>KLCC</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!--title-->
    <string name="todayRate">Today's Rate</string>
    <string name="RateConversion">Rate Conversion</string>
</resources>
