<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/CurrencyRates" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/ConversionCalculator" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/PurchaseCurrency" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/MyPurchase" />

        <item
            android:id="@+id/nav_changeLanguage"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/Language"
            />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/MyProfile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/Logout" />
            <item
                android:id="@+id/nav_QR"
                android:icon="@drawable/bt_ic_camera"
                android:title="Scan QR"/>
        </menu>
    </item>

</menu>
