
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kangwenn.currexez.HomepageFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/functionLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blackborder"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonRate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/zxing_transparent"
                    android:src="@drawable/ic_trending_up_black_24dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/CurrencyRates"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="55dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonCalculator"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/zxing_transparent"
                android:src="@drawable/ic_assessment_black_24dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/ConversionCalculator"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="55dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/functionLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/functionLayout1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blackborder"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonPurchase"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/zxing_transparent"
                    android:src="@drawable/ic_add_shopping_cart_black_24dp" />

                <TextView
                    android:id="@+id/textViewPurchaseCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/PurchaseCurrency"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="55dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonSell"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/zxing_transparent"
                android:src="@drawable/ic_monetization_on_black_24dp" />

            <TextView
                android:id="@+id/textViewSellCurrency"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/SellCurrency"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="55dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/functionLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/functionLayout2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonHistory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/zxing_transparent"
                    android:src="@drawable/ic_history_black_24dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/MyPurchase"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="55dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/zxing_transparent"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/MyProfile"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="55dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/functionLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/functionLayout3"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonFlight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/zxing_transparent"
                    android:src="@drawable/ic_flight_black_24dp" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/BrowseFlight"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="55dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonHotel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/zxing_transparent"
                android:src="@drawable/ic_hotel_black_24dp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/Browsehotel"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="55dp" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/functionLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/tab_text_1"
        android:textColor="@color/black" />

    <ListView
        android:id="@+id/homeListView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/adView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView22" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
</RelativeLayout>
